--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@cnamts/vue-cli-plugin-proxy": "^2.2.1",
+    "axios": "^1.2.0",
     "core-js": "^3.8.3",
     "element-plus": "^2.2.25",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
